<resources>
    <string name="app_name">Timetable-Kotlin</string>

    <string name="no_data_to_show">No data to show</string>
    <string name="data_loading_failed">Failed to load data</string>

    <string name="action_save">Save</string>
    <string name="action_settings">Settings</string>

    <string name="lesson_title">Title</string>
    <string name="lesson_teacher">Teacher</string>
    <string name="lesson_day">Select day</string>
    <string name="lesson_start">00:00</string>
    <string name="lesson_end">00:00</string>

</resources>
